<?xml version="1.0"?>
<package>
  <name>openai_gym</name>
  <version>0.9.1</version>
  <description>Catkin wrapper around OpenAI Gym</description>
  <maintainer email="zak@rice.edu">Zak Kingston</maintainer>
  <license>MIT</license>

  <author>Kavraki Lab</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python-numpy</build_depend>
  <build_depend>python-requests</build_depend>
  <build_depend>python-six</build_depend>
  <build_depend>python-pyglet</build_depend>
  <build_depend>python-scipy</build_depend>

  <run_depend>python-numpy</run_depend>
  <run_depend>python-requests</run_depend>
  <run_depend>python-six</run_depend>
  <run_depend>python-pyglet</run_depend>
  <run_depend>python-scipy</run_depend>

  <export>
  </export>
</package>
